# diffusion-model-from-scratch

./: .gitignore  README.md  pyproject.toml
scripts/: eval_fid.py  sample_ckpt.py  visualization.py
src/diffusion/: ddpm.py  schedule.py
src/model/: U_net.py  modules.py
src/training/: trainer.py
