[project]
name = "diffusion-from-scratch"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "einops>=0.7",
    "tqdm",
    "matplotlib",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]         # 从项目根目录开始找
include = ["src*"]    # 只包含以 src 开头的目录作为 Python 包